kubernetes/definitions/node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:  #preferredDuringSchedulingIgnoredDuringExecutions
        nodeSelectorTerms:
        - matchExpressions:
          - key: disktype
            operator: In  # Exists, NotIn, DoesNotExist, Gt, Lt
            values:
            - ssd            
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
