kubernetes/definitions/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: test
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
    - name: nginx-container
      image: nginx
