kubernetes/definitions/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service

spec:
  type: NodePort # ClusterIP
  ports:
    - targetPort: 80
      port: 80
      nodePort: 3008 # no need for ClusterIP
  selector:
    app: myapp
